--- a/ih110hdpro/EFI/OC/oldConfig.plist
+++ b/ih110hdpro/EFI/OC/oldConfig.plist
@@ -34,7 +34,7 @@
                     <key>Comment</key>
                     <string>NVRAM-PLC</string>
                     <key>Enabled</key>
-                    <false/>
+                    <true/>
                     <key>Path</key>
                     <string>SSDT-PMC.aml</string>
                 </dict>
@@ -101,7 +101,7 @@
                 <key>DisableSingleUser</key>
                 <false/>
                 <key>DisableVariableWrite</key>
-                <true/>
+                <false/>
                 <key>DiscardHibernateMap</key>
                 <false/>
                 <key>EnableSafeModeSlide</key>
@@ -138,21 +138,6 @@
         <dict>
             <key>Add</key>
             <dict>
-                <key>PciRoot(0x0)/Pci(0x1D,0x0)/Pci(0x0,0x0)</key>
-                <dict>
-                    <key>AAPL,slot-name</key>
-                    <string>WLAN</string>
-                    <key>compatible</key>
-                    <string>pci14e4,4331</string>
-                    <key>device_type</key>
-                    <string>Airport Extreme</string>
-                    <key>model</key>
-                    <string>DW1820A (BCM4350) 802.11ac Wireless</string>
-                    <key>name</key>
-                    <string>Airport</string>
-                    <key>pci-aspm-default</key>
-                    <integer>0</integer>
-                </dict>
                 <key>PciRoot(0x0)/Pci(0x1f,0x3)</key>
                 <dict>
                     <key>device-id</key>
@@ -441,6 +426,24 @@
                     <key>PlistPath</key>
                     <string>Contents/Info.plist</string>
                 </dict>
+                <dict>
+                    <key>Arch</key>
+                    <string>Any</string>
+                    <key>BundlePath</key>
+                    <string>Display-4cf4-2380.kext</string>
+                    <key>Comment</key>
+                    <string>V9.9.9</string>
+                    <key>Enabled</key>
+                    <true/>
+                    <key>ExecutablePath</key>
+                    <string></string>
+                    <key>MaxKernel</key>
+                    <string></string>
+                    <key>MinKernel</key>
+                    <string></string>
+                    <key>PlistPath</key>
+                    <string>Contents/Info.plist</string>
+                </dict>
             </array>
             <key>Block</key>
             <array>
@@ -457,8 +460,6 @@
                     <string></string>
                     <key>MinKernel</key>
                     <string></string>
-                    <key>Strategy</key>
-                    <string>Disable</string>
                 </dict>
             </array>
             <key>Emulate</key>
@@ -549,8 +550,6 @@
                 <false/>
                 <key>AppleXcpmForceBoost</key>
                 <false/>
-                <key>CustomPciSerialDevice</key>
-                <false/>
                 <key>CustomSMBIOSGuid</key>
                 <false/>
                 <key>DisableIoMapper</key>
@@ -563,8 +562,6 @@
                 <false/>
                 <key>ExternalDiskIcons</key>
                 <true/>
-                <key>ForceAquantiaEthernet</key>
-                <false/>
                 <key>ForceSecureBootScheme</key>
                 <false/>
                 <key>IncreasePciBarSize</key>
@@ -643,19 +640,23 @@
                 <integer>0</integer>
                 <key>DisplayLevel</key>
                 <integer>2147483650</integer>
-                <key>LogModules</key>
-                <string>*</string>
+                <key>SerialInit</key>
+                <false/>
                 <key>SysReport</key>
                 <false/>
                 <key>Target</key>
-                <integer>67</integer>
+                <integer>0</integer>
             </dict>
             <key>Entries</key>
             <array/>
             <key>Security</key>
             <dict>
+                <key>AllowNvramReset</key>
+                <false/>
                 <key>AllowSetDefault</key>
                 <true/>
+                <key>AllowToggleSip</key>
+                <false/>
                 <key>ApECID</key>
                 <integer>0</integer>
                 <key>AuthRestart</key>
@@ -680,40 +681,6 @@
                 <string>Disabled</string>
                 <key>Vault</key>
                 <string>Optional</string>
-            </dict>
-            <key>Serial</key>
-            <dict>
-                <key>Custom</key>
-                <dict>
-                    <key>BaudRate</key>
-                    <integer>115200</integer>
-                    <key>ClockRate</key>
-                    <integer>1843200</integer>
-                    <key>DetectCable</key>
-                    <false/>
-                    <key>ExtendedTxFifoSize</key>
-                    <integer>64</integer>
-                    <key>FifoControl</key>
-                    <integer>7</integer>
-                    <key>LineControl</key>
-                    <integer>3</integer>
-                    <key>PciDeviceInfo</key>
-                    <data>/w==</data>
-                    <key>RegisterAccessWidth</key>
-                    <integer>8</integer>
-                    <key>RegisterBase</key>
-                    <integer>1016</integer>
-                    <key>RegisterStride</key>
-                    <integer>1</integer>
-                    <key>UseHardwareFlowControl</key>
-                    <false/>
-                    <key>UseMmio</key>
-                    <false/>
-                </dict>
-                <key>Init</key>
-                <false/>
-                <key>Override</key>
-                <false/>
             </dict>
             <key>Tools</key>
             <array>
@@ -766,11 +733,11 @@
                 <key>7C436110-AB2A-4BBB-A880-FE41995C9F82</key>
                 <dict>
                     <key>boot-args</key>
-                    <string>brcmfx-country=#a -disablegfxfirmware -v</string>
+                    <string>brcmfx-country=#a -disablegfxfirmware -v amfi_get_out_of_my_way=0x1  ngfxcompat=1 ngfxgl=1 nvda_drv_vrl=1</string>
                     <key>bootercfg</key>
                     <string>log=0 debug=0 level=0</string>
                     <key>csr-active-config</key>
-                    <data>5wMAAA==</data>
+                    <data>7w8AAA==</data>
                     <key>nvda_drv</key>
                     <data>MQ==</data>
                     <key>prev-lang:kbd</key>
@@ -779,6 +746,8 @@
             </dict>
             <key>Delete</key>
             <dict/>
+            <key>LegacyEnable</key>
+            <false/>
             <key>LegacyOverwrite</key>
             <false/>
             <key>LegacySchema</key>
@@ -822,7 +791,7 @@
                 <key>AdviseFeatures</key>
                 <false/>
                 <key>MLB</key>
-                <string>C02732200QXH69F1M</string>
+                <string>C02834303GUH69FA8</string>
                 <key>MaxBIOSVersion</key>
                 <false/>
                 <key>ProcessorType</key>
@@ -836,9 +805,9 @@
                 <key>SystemProductName</key>
                 <string>iMac18,1</string>
                 <key>SystemSerialNumber</key>
-                <string>C02V60QFH7JY</string>
+                <string>C02X805GH7JY</string>
                 <key>SystemUUID</key>
-                <string>8EC6A749-C2C2-4C23-AD61-0EC4147C0A02</string>
+                <string>F52C6FBB-5E98-4871-A686-45C323CE1EBE</string>
             </dict>
             <key>UpdateDataHub</key>
             <true/>
@@ -927,8 +896,6 @@
                     <string></string>
                     <key>Enabled</key>
                     <false/>
-                    <key>LoadEarly</key>
-                    <true/>
                     <key>Path</key>
                     <string>MemoryAllocation.efi</string>
                 </dict>
@@ -938,8 +905,6 @@
                     <key>Comment</key>
                     <string></string>
                     <key>Enabled</key>
-                    <true/>
-                    <key>LoadEarly</key>
                     <true/>
                     <key>Path</key>
                     <string>OpenCanopy.efi</string>
@@ -951,8 +916,6 @@
                     <string></string>
                     <key>Enabled</key>
                     <true/>
-                    <key>LoadEarly</key>
-                    <true/>
                     <key>Path</key>
                     <string>OpenRuntime.efi</string>
                 </dict>
@@ -963,10 +926,18 @@
                     <string></string>
                     <key>Enabled</key>
                     <false/>
-                    <key>LoadEarly</key>
-                    <true/>
                     <key>Path</key>
                     <string>OpenUsbKbDxe.efi</string>
+                </dict>
+                <dict>
+                    <key>Arguments</key>
+                    <string></string>
+                    <key>Comment</key>
+                    <string></string>
+                    <key>Enabled</key>
+                    <true/>
+                    <key>Path</key>
+                    <string>OpenHfsPlus.efi</string>
                 </dict>
             </array>
             <key>Input</key>
